--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,7 @@ set(CMAKE_BUILD_TYPE Debug)
 add_definitions(-DDEBUG)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -ggdb3")
 add_library(cdrasn1 SHARED
-		parser.cpp)
+		parser.cpp
+		definitions.cpp
+		auxfun.cpp
+		defloader.cpp)
